Package_Tools/include-C/ImageMagick-6/wand/feretig/magick_image.h

extern  MagickBooleanType
  MagickWriteImage(MagickWand *,const char *);
extern  MagickBooleanType
  MagickWriteImageFile(MagickWand *,FILE *);
extern  MagickBooleanType
  MagickWriteImages(MagickWand *,const char *,const MagickBooleanType);
extern  MagickBooleanType
  MagickWriteImagesFile(MagickWand *,FILE *);
extern  MagickProgressMonitor
  MagickSetImageProgressMonitor(MagickWand *,const MagickProgressMonitor,
    void *);
extern  MagickWand
  *MagickAppendImages(MagickWand *,const MagickBooleanType);
extern  MagickBooleanType
  *MagickCoalesceImages(MagickWand *);
extern  MagickBooleanType
  *MagickCombineImages(MagickWand *,const ChannelType);
extern  MagickBooleanType
  *MagickCompareImageChannels(MagickWand *,const MagickWand *,const ChannelType,    const MetricType,double *);
extern  MagickBooleanType
  *MagickCompareImages(MagickWand *,const MagickWand *,const MetricType,    double *);
extern  MagickBooleanType
  *MagickCompareImageLayers(MagickWand *,const ImageLayerMethod);
extern  MagickBooleanType
  *MagickDeconstructImages(MagickWand *);
extern  MagickBooleanType
  *MagickEvaluateImages(MagickWand *,const MagickEvaluateOperator);
extern  MagickBooleanType
  *MagickFxImage(MagickWand *,const char *);
extern  MagickBooleanType
  *MagickFxImageChannel(MagickWand *,const ChannelType,const char *);
extern  MagickBooleanType
  *MagickGetImage(MagickWand *);
extern  MagickBooleanType
  *MagickGetImageClipMask(MagickWand *);
extern  MagickBooleanType
  *MagickGetImageRegion(MagickWand *,const size_t,const size_t,const ssize_t,    const ssize_t);
extern  MagickBooleanType
  *MagickMergeImageLayers(MagickWand *,const ImageLayerMethod);
extern  MagickBooleanType
  *MagickMorphImages(MagickWand *,const size_t);
extern  MagickBooleanType
  *MagickMontageImage(MagickWand *,const DrawingWand *,const char *,    const char *,const MontageMode,const char *);
extern  MagickBooleanType
  *MagickOptimizeImageLayers(MagickWand *);
extern  MagickBooleanType
  *MagickPreviewImages(MagickWand *wand,const PreviewType);
extern  MagickBooleanType
  *MagickSimilarityImage(MagickWand *,const MagickWand *,RectangleInfo *,    double *);
extern  MagickBooleanType
  *MagickSmushImages(MagickWand *,const MagickBooleanType,const ssize_t);
extern  MagickBooleanType
  *MagickSteganoImage(MagickWand *,const MagickWand *,const ssize_t);
extern  MagickBooleanType
  *MagickStereoImage(MagickWand *,const MagickWand *);
extern  MagickBooleanType
  *MagickTextureImage(MagickWand *,const MagickWand *);
extern  MagickBooleanType
  *MagickTransformImage(MagickWand *,const char *,const char *);
extern  OrientationType
  MagickGetImageOrientation(MagickWand *);
extern  PixelWand
  **MagickGetImageHistogram(MagickWand *,size_t *);
extern  RenderingIntent
  MagickGetImageRenderingIntent(MagickWand *);
extern  ResolutionType
  MagickGetImageUnits(MagickWand *);
extern  size_t
  MagickGetImageColors(MagickWand *);
extern  size_t
  MagickGetImageCompressionQuality(MagickWand *);
extern  size_t
  MagickGetImageDelay(MagickWand *);
extern  size_t
  MagickGetImageChannelDepth(MagickWand *,const ChannelType);
extern  size_t
  MagickGetImageDepth(MagickWand *);
extern  size_t
  MagickGetImageHeight(MagickWand *);
extern  size_t
  MagickGetImageIterations(MagickWand *);
extern  size_t
  MagickGetImageScene(MagickWand *);
extern  size_t
  MagickGetImageTicksPerSecond(MagickWand *);
extern  size_t
  MagickGetImageWidth(MagickWand *);
extern  size_t
  MagickGetNumberImages(MagickWand *);
extern  unsigned char
  *MagickGetImageBlob(MagickWand *,size_t *);
extern  double
  *MagickGetImagesBlob(MagickWand *,size_t *);
extern  VirtualPixelMethod
  MagickGetImageVirtualPixelMethod(MagickWand *);
extern  VirtualPixelMethod
  MagickSetImageVirtualPixelMethod(MagickWand *,const VirtualPixelMethod);