sandbox/unbrauchbar/magick_6.9.12.98/sandbox/pas_units/magick/wand/magick_image.pas

function MagickWriteImage(para1: PMagickWand; para2: pchar): TMagickBooleanType; cdecl; external libmagickwand;
function MagickWriteImageFile(para1: PMagickWand; para2: PFILE): TMagickBooleanType; cdecl; external libmagickwand;
function MagickWriteImages(para1: PMagickWand; para2: pchar; para3: TMagickBooleanType): TMagickBooleanType; cdecl; external libmagickwand;
function MagickWriteImagesFile(para1: PMagickWand; para2: PFILE): TMagickBooleanType; cdecl; external libmagickwand;
function MagickSetImageProgressMonitor(para1: PMagickWand; para2: TMagickProgressMonitor; para3: pointer): TMagickProgressMonitor; cdecl; external libmagickwand;
function MagickAppendImages(para1: PMagickWand; para2: TMagickBooleanType): PMagickWand; cdecl; external libmagickwand;
function MagickCoalesceImages(para1: PMagickWand): PMagickBooleanType; cdecl; external libmagickwand;
function MagickCombineImages(para1: PMagickWand; para2: TChannelType): PMagickBooleanType; cdecl; external libmagickwand;
function MagickCompareImageChannels(para1: PMagickWand; para2: PMagickWand; para3: TChannelType; para4: TMetricType; para5: Pdouble): PMagickBooleanType; cdecl; external libmagickwand;
function MagickCompareImages(para1: PMagickWand; para2: PMagickWand; para3: TMetricType; para4: Pdouble): PMagickBooleanType; cdecl; external libmagickwand;
function MagickCompareImageLayers(para1: PMagickWand; para2: TImageLayerMethod): PMagickBooleanType; cdecl; external libmagickwand;
function MagickDeconstructImages(para1: PMagickWand): PMagickBooleanType; cdecl; external libmagickwand;
function MagickEvaluateImages(para1: PMagickWand; para2: TMagickEvaluateOperator): PMagickBooleanType; cdecl; external libmagickwand;
function MagickFxImage(para1: PMagickWand; para2: pchar): PMagickBooleanType; cdecl; external libmagickwand;
function MagickFxImageChannel(para1: PMagickWand; para2: TChannelType; para3: pchar): PMagickBooleanType; cdecl; external libmagickwand;
function MagickGetImage(para1: PMagickWand): PMagickBooleanType; cdecl; external libmagickwand;
function MagickGetImageClipMask(para1: PMagickWand): PMagickBooleanType; cdecl; external libmagickwand;
function MagickGetImageRegion(para1: PMagickWand; para2: Tsize_t; para3: Tsize_t; para4: Tssize_t; para5: Tssize_t): PMagickBooleanType; cdecl; external libmagickwand;
function MagickMergeImageLayers(para1: PMagickWand; para2: TImageLayerMethod): PMagickBooleanType; cdecl; external libmagickwand;
function MagickMorphImages(para1: PMagickWand; para2: Tsize_t): PMagickBooleanType; cdecl; external libmagickwand;
function MagickMontageImage(para1: PMagickWand; para2: PDrawingWand; para3: pchar; para4: pchar; para5: TMontageMode;
  para6: pchar): PMagickBooleanType; cdecl; external libmagickwand;
function MagickOptimizeImageLayers(para1: PMagickWand): PMagickBooleanType; cdecl; external libmagickwand;
function MagickPreviewImages(wand: PMagickWand; para2: TPreviewType): PMagickBooleanType; cdecl; external libmagickwand;
function MagickSimilarityImage(para1: PMagickWand; para2: PMagickWand; para3: PRectangleInfo; para4: Pdouble): PMagickBooleanType; cdecl; external libmagickwand;
function MagickSmushImages(para1: PMagickWand; para2: TMagickBooleanType; para3: Tssize_t): PMagickBooleanType; cdecl; external libmagickwand;
function MagickSteganoImage(para1: PMagickWand; para2: PMagickWand; para3: Tssize_t): PMagickBooleanType; cdecl; external libmagickwand;
function MagickStereoImage(para1: PMagickWand; para2: PMagickWand): PMagickBooleanType; cdecl; external libmagickwand;
function MagickTextureImage(para1: PMagickWand; para2: PMagickWand): PMagickBooleanType; cdecl; external libmagickwand;
function MagickTransformImage(para1: PMagickWand; para2: pchar; para3: pchar): PMagickBooleanType; cdecl; external libmagickwand;
function MagickGetImageOrientation(para1: PMagickWand): TOrientationType; cdecl; external libmagickwand;
function MagickGetImageHistogram(para1: PMagickWand; para2: Psize_t): PPPixelWand; cdecl; external libmagickwand;
function MagickGetImageRenderingIntent(para1: PMagickWand): TRenderingIntent; cdecl; external libmagickwand;
function MagickGetImageUnits(para1: PMagickWand): TResolutionType; cdecl; external libmagickwand;
function MagickGetImageColors(para1: PMagickWand): Tsize_t; cdecl; external libmagickwand;
function MagickGetImageCompressionQuality(para1: PMagickWand): Tsize_t; cdecl; external libmagickwand;
function MagickGetImageDelay(para1: PMagickWand): Tsize_t; cdecl; external libmagickwand;
function MagickGetImageChannelDepth(para1: PMagickWand; para2: TChannelType): Tsize_t; cdecl; external libmagickwand;
function MagickGetImageDepth(para1: PMagickWand): Tsize_t; cdecl; external libmagickwand;
function MagickGetImageHeight(para1: PMagickWand): Tsize_t; cdecl; external libmagickwand;
function MagickGetImageIterations(para1: PMagickWand): Tsize_t; cdecl; external libmagickwand;
function MagickGetImageScene(para1: PMagickWand): Tsize_t; cdecl; external libmagickwand;
function MagickGetImageTicksPerSecond(para1: PMagickWand): Tsize_t; cdecl; external libmagickwand;
function MagickGetImageWidth(para1: PMagickWand): Tsize_t; cdecl; external libmagickwand;
function MagickGetNumberImages(para1: PMagickWand): Tsize_t; cdecl; external libmagickwand;
function MagickGetImageBlob(para1: PMagickWand; para2: Psize_t): pbyte; cdecl; external libmagickwand;
function MagickGetImagesBlob(para1: PMagickWand; para2: Psize_t): Pdouble; cdecl; external libmagickwand;
function MagickGetImageVirtualPixelMethod(para1: PMagickWand): TVirtualPixelMethod; cdecl; external libmagickwand;
function MagickSetImageVirtualPixelMethod(para1: PMagickWand; para2: TVirtualPixelMethod): TVirtualPixelMethod; cdecl; external libmagickwand;

// === Konventiert am: 5-1-26 19:40:03 ===


implementation



end.
